--- a/AUTHORS
+++ b/AUTHORS
@@ -14,3 +14,4 @@ Development Lead
 Contributors
 -------------
 * Luca Beltrame (https://github.com/lbeltrame)
+* John Kern (https://github.com/kern3020)
