parse requirements from file add moonso as collaborator remove vagrant setup (deprecated)

--- a/AUTHORS
+++ b/AUTHORS
@@ -13,5 +13,6 @@ Development Lead
 
 Contributors
 -------------
+* Måns Magnusson (https://github.com/moonso)
 * Luca Beltrame (https://github.com/lbeltrame)
 * John Kern (https://github.com/kern3020)
