More fork path changes of documentation
Changed Warehouse to Chanjo since this seems to be a cut n paste mistake.
Added Patrik Grenfeldt as an contributor.
Changed path to repo to Clinical-Genomics for Chanjo to reflect fork path.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# A list of people who have contributed to Warehouse in order of their first
+# A list of people who have contributed to Chanjo in order of their first
 #   contribution.
 #
 #   Uses the format of ``Name <email@domain.tld> (url)`` with the ``(url)``
@@ -16,3 +16,4 @@ Contributors
 * Måns Magnusson (https://github.com/moonso)
 * Luca Beltrame (https://github.com/lbeltrame)
 * John Kern (https://github.com/kern3020)
+* Patrik Grenfeldt (https://github.com/patrikgrenfeldt)
